@@ -1,3 +1,5 @@
+* Make sure `Object.extend`, `Object.keys` and `Object.values` take care of JScript's DontEnum bug [#382 state:resolved] (Garrett Smith, Samuel Lebeau, kangax)
+
 * Add missing semicolons. [#751 state:resolved] (Diego Perini)
 
 * Remove expensive (for such low-level method) internal `getClass` in favor of plain string comparison (kangax)
